--- a/index.ipynb
+++ b/index.ipynb
@@ -76,12 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    return tup(term[0]*term[1], term[1]-1)"
+    "    return tuple(term[0]*term[1], term[1]-1)"
    ]
   },
   {
