--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    return tuple(term[0]*term[1], term[1]-1)"
+    "    return term()[0]*term()[1], term()[1]-1)"
    ]
   },
   {
