--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return function_term"
+    "    return function_terms[0][1]"
    ]
   },
   {
