Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return list((function_terms[0][0]*function_terms[0][1],function_terms[0][1] - 1), (function_terms[1][0]*function_terms[1][1], function_terms[1][1] -1))"
+    "    return list[(function_terms[0][0]*function_terms[0][1],function_terms[0][1] - 1), (function_terms[1][0]*function_terms[1][1], function_terms[1][1] -1)]"
    ]
   },
   {
