Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,8 @@
    ],
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
-    "for ans in find_derivative\n",
+    "for ans in find_derivative:\n",
+    "    \n",
     "filter(zip(*find_derivative)[1]\n",
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]"
    ]
