Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
     "for ans in find_derivative:\n",
-    "    filter(ans[1] = 0,\n",
+    "    filter(ans[1] = 0, find_derivative\n",
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]"
    ]
   },
