Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,24 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(6, 1), (0, -1)]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (<ipython-input-28-35b6580c1209>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-35b6580c1209>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    filter(ans[1] = 0, find_derivative)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+     ]
     }
    ],
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
     "for ans in find_derivative:\n",
-    "    filter(ans[1] = 0, find_derivative\n",
+    "    filter(ans[1] = 0, find_derivative)\n",
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]"
    ]
   },
