Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "[(6, 1), (0, -1)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
     "# for ans in find_derivative:\n",
-    "#     filter(ans[0] = 0, find_derivative)\n",
+    "#     return filter(ans[0] = 0, find_derivative)\n",
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]"
    ]
   },
