Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,18 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(6, 1), (0, -1)]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (<ipython-input-31-be352ede2be4>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-be352ede2be4>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return filter(ans[0] = 0, find_derivative)\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+     ]
     }
    ],
    "source": [
