--- a/index.ipynb
+++ b/index.ipynb
@@ -185,22 +185,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "keyword can't be an expression (<ipython-input-31-be352ede2be4>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-be352ede2be4>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return filter(ans[0] = 0, find_derivative)\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[(6, 1), (0, -1)]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
-    "for ans in find_derivative:\n",
-    "    return filter(ans[0] = 0, find_derivative)\n",
+    "# for ans in find_derivative:\n",
+    "#     return filter(ans[0] = 0, find_derivative)\n",
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]"
    ]
   },
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
