--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,9 @@
     "from calculus import output_at\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    pass"
+    "    pass\n",
+    "\n",
+    "\n"
    ]
   },
   {
