--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,7 @@
     "from calculus import output_at\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    ans = l\n",
+    "    ans = list(map)\n",
     "\n",
     "\n"
    ]
