Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,10 +233,10 @@
    "source": [
     "# Feel free to use the output_at function in solving this\n",
     "\n",
-    "calculus.py\n",
-    "def output_at(list_of_terms, x_value):\n",
-    "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
-    "    return sum(outputs)\n",
+    "# calculus.py\n",
+    "# def output_at(list_of_terms, x_value):\n",
+    "#     outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
+    "#     return sum(outputs)\n",
     "\n",
     "from calculus import output_at\n",
     "\n",
