Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,6 +240,8 @@
     "\n",
     "from calculus import output_at\n",
     "\n",
+    "def\n",
+    "\n",
     "def derivative_at(terms, x):\n",
     "    ans = list(map(lambda term: term_output(term, x), terms))\n",
     "    return sum(ans)\n",
