--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,8 @@
     "\n",
     "from calculus import output_at\n",
     "\n",
-    "def\n",
+    "def term_output(term, x):\n",
+    "    return \n",
     "\n",
     "def derivative_at(terms, x):\n",
     "    ans = list(map(lambda term: term_output(term, x), terms))\n",
