Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
     "from calculus import output_at\n",
     "\n",
     "def term_output(term, x):\n",
-    "    return \n",
+    "    return term[0]*x**term\n",
     "\n",
     "def derivative_at(terms, x):\n",
     "    ans = list(map(lambda term: term_output(term, x), terms))\n",
