Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,9 +233,7 @@
     "\n",
     "def derivative_at(terms, x):\n",
     "    ans = list(map(lambda term: term_output(term, x), terms))\n",
-    "    return sum(ans)\n",
-    "\n",
-    "\n"
+    "    return sum(ans)\n"
    ]
   },
   {
