Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
     "from calculus import output_at\n",
     "\n",
     "def term_output(term, x):\n",
-    "    return term[0]*x**term[1]\n",
+    "    return term[0]*(x**term[1])\n",
     "\n",
     "def derivative_at(terms, x):\n",
     "    ans = list(map(lambda term: term_output(term, x), terms))\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "1"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
