Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,8 @@
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
-    "    \n",
+    "    constant = term[0]*term[1]\n",
+    "    e\n",
     "    return (term[0]*term[1], term[1]-1)"
    ]
   },
