Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "def find_term_derivative(term):\n",
     "    constant = term[0]*term[1]\n",
-    "    e\n",
+    "    exponent = term[1] - 1\n",
     "    return (term[0]*term[1], term[1]-1)"
    ]
   },
