--- a/index.ipynb
+++ b/index.ipynb
@@ -76,19 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
     "    constant = term[0]*term[1]\n",
     "    exponent = term[1] - 1\n",
-    "    return (term[0]*term[1], term[1]-1)"
+    "    return (constant, exponent)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "(3, 2)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
