--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative_terms = list(map(lambda function_term: find_term_derivative(function_term), function_terms))\n",
-    "    return [(function_terms[0][0]*function_terms[0][1],function_terms[0][1] - 1), (function_terms[1][0]*function_terms[1][1], function_terms[1][1] -1)]"
+    "    return list(filter(derivatives_Term))"
    ]
   },
   {
