Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,22 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "keyword can't be an expression (<ipython-input-56-e13e6d9dcf97>, line 3)",
+     "evalue": "keyword can't be an expression (<ipython-input-57-34281e5e5ae6>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-56-e13e6d9dcf97>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return list(filter(derivatives_term[0] = 0), derivative_terms)\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-57-34281e5e5ae6>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return list(filter(derivative_term[0] = 0), derivative_terms)\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
      ]
     }
    ],
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative_terms = list(map(lambda function_term: find_term_derivative(function_term), function_terms))\n",
-    "    return list(filter(derivatives_term[0] = 0), derivative_terms)"
+    "    return list(filter(derivative_term[0] = 0), derivative_terms)"
    ]
   },
   {
