--- a/index.ipynb
+++ b/index.ipynb
@@ -149,22 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "keyword can't be an expression (<ipython-input-58-69b52046006d>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-59-f44f6ab7c6ba>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-58-69b52046006d>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return list(filter(function_term[0] = 0), derivative_terms)\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-59-f44f6ab7c6ba>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return list(filter(lambda derivative_term: derivative_term[0] =! 0), derivative_terms)\u001b[0m\n\u001b[0m                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def find_derivative(function_terms):\n",
     "    derivative_terms = list(map(lambda function_term: find_term_derivative(function_term), function_terms))\n",
-    "    return list(filter(lambda derivfunction_term[0] = 0), derivative_terms)"
+    "    return list(filter(lambda derivative_term: derivative_term[0] = 0), derivative_terms)"
    ]
   },
   {
