Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,13 +235,13 @@
     "    return term[0]*(x**term[1])\n",
     "\n",
     "def derivative_at(find_derivative, x):\n",
-    "    ans = list(map(lambda term: term_output(term, x), terms))\n",
+    "    ans = list(map(lambda term: term_output(term, x), find_derivative))\n",
     "    return ans\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "[12, -11]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
