Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,14 +234,14 @@
     "def term_output(term, x):\n",
     "    return term[0]*(x**term[1])\n",
     "\n",
-    "def derivative_at(f, x):\n",
-    "    ans = list(map(lambda term: term_output(term, x), derivative_terms))\n",
+    "def derivative_at(find_derivative, x):\n",
+    "    ans = list(map(lambda term: term_output(term, x), find_derivative))\n",
     "    return ans\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "[12, -11]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
