Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,23 +241,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[12, -11]"
+       "[(6, 1)]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
-    "derivative_at(three_x_squared_minus_eleven, 2) # 12"
+    "#derivative_at(three_x_squared_minus_eleven, 2) # 12"
    ]
   },
   {
