Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,23 +241,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(6, 1)]"
+       "[12, -11]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]\n",
-    "#derivative_at(three_x_squared_minus_eleven, 2) # 12"
+    "derivative_at(three_x_squared_minus_eleven, 2) # 12"
    ]
   },
   {
