Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +228,10 @@
     "# def output_at(list_of_terms, x_value):\n",
     "#     outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
     "#     return sum(outputs)\n",
+    "\n",
+    "def find_derivative(function_terms):\n",
+    "    derivative_terms = list(map(lambda function_term: find_term_derivative(function_term), function_terms))\n",
+    "    return list(filter(lambda derivative_term: derivative_term[0] != 0, derivative_terms))\n",
     "\n",
     "from calculus import output_at\n",
     "\n",
@@ -241,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +254,7 @@
        "[12, -11]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
