Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
     "    return term[0]*(x**term[1])\n",
     "\n",
     "def derivative_at(find_derivative, x):\n",
-    "    term_output()\n",
+    "    ans = list(map(lambda function_terms: term_output(function_terms, x), find_derivative))\n",
     "    return ans"
    ]
   },
