Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,8 +238,8 @@
     "def term_output(term, x):\n",
     "    return term[0]*(x**term[1])\n",
     "\n",
-    "def derivative_at(find_derivative, x):\n",
-    "    ans = list(map(lambda function_terms: term_output(function_terms, x), find_derivative))\n",
+    "def derivative_at(terms, x):\n",
+    "    ans = list(map(lambda terms: term_output(function_terms, x), find_derivative))\n",
     "    return ans"
    ]
   },
