Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
     "    return term[0]*(x**term[1])\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    ans = list(map(lambda terms: term_output(terms, x), terms))\n",
+    "    ans = list(map(lambda terms: term_output(terms, x), find_derivative(terms))\n",
     "    return ans"
    ]
   },
