Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,22 +239,22 @@
     "    return term[0]*(x**term[1])\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    ans = list(map(lambda terms: term_output(terms, x), find_derivative(terms))\n",
-    "    return ans"
+    "    ans = list(map(lambda terms: term_output(terms, x), find_derivative(terms)))\n",
+    "    return sum(ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[12, -11]"
+       "12"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
