Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    derivative_function = list(map(lambda x: output_at(terms, x),x_values))\n",
+    "    derivative_terms = find_derivative(derivative)\n",
     "    return function_values_trace(x_values, derivative_function, mode = 'line')"
    ]
   },
