Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -482,7 +482,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    derivative_terms = find_derivative(terms)\n",
-    "    return function_values_trace(x_values, derivative_function, mode = 'line')"
+    "    return function_values_trace(derivative_function, mode = 'line')"
    ]
   },
   {
