Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -496,19 +496,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'three_x_squared_minus_eleven_derivative_trace' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-a14b3e4a33cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mthree_x_squared_minus_eleven_derivative_trace\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'three_x_squared_minus_eleven_derivative_trace' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'x': [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4],\n",
+       " 'y': [-30, -24, -18, -12, -6, 0, 6, 12, 18, 24],\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'data',\n",
+       " 'text': []}"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -524,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,9 +553,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the format of your plot grid:\n",
+      "[ (1,1) x1,y1 ]  [ (1,2) x2,y2 ]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "4084887c-d589-11e9-98d9-af26b0674e77",
+         "x": [
+          -5,
+          -4,
+          -3,
+          -2,
+          -1,
+          0,
+          1,
+          2,
+          3,
+          4
+         ],
+         "xaxis": "x",
+         "y": [
+          64,
+          37,
+          16,
+          1,
+          -8,
+          -11,
+          -8,
+          1,
+          16,
+          37
+         ],
+         "yaxis": "y"
+        },
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "4085603a-d589-11e9-98d9-af26b0674e77",
+         "x": [
+          -5,
+          -4,
+          -3,
+          -2,
+          -1,
+          0,
+          1,
+          2,
+          3,
+          4
+         ],
+         "xaxis": "x2",
+         "y": [
+          -30,
+          -24,
+          -18,
+          -12,
+          -6,
+          0,
+          6,
+          12,
+          18,
+          24
+         ],
+         "yaxis": "y2"
+        }
+       ],
+       "layout": {
+        "xaxis": {
+         "anchor": "y",
+         "domain": [
+          0,
+          0.45
+         ]
+        },
+        "xaxis2": {
+         "anchor": "y2",
+         "domain": [
+          0.55,
+          1
+         ]
+        },
+        "yaxis": {
+         "anchor": "x",
+         "domain": [
+          0,
+          1
+         ]
+        },
+        "yaxis2": {
+         "anchor": "x2",
+         "domain": [
+          0,
+          1
+         ]
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"df8c82c4-6003-4f2a-a6b7-7086afbba3d7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            'df8c82c4-6003-4f2a-a6b7-7086afbba3d7',\n",
+       "            [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4], \"y\": [64, 37, 16, 1, -8, -11, -8, 1, 16, 37], \"type\": \"scatter\", \"uid\": \"4084887c-d589-11e9-98d9-af26b0674e77\", \"xaxis\": \"x\", \"yaxis\": \"y\"}, {\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4], \"y\": [-30, -24, -18, -12, -6, 0, 6, 12, 18, 24], \"type\": \"scatter\", \"uid\": \"4085603a-d589-11e9-98d9-af26b0674e77\", \"xaxis\": \"x2\", \"yaxis\": \"y2\"}],\n",
+       "            {\"xaxis\": {\"anchor\": \"y\", \"domain\": [0.0, 0.45]}, \"yaxis\": {\"anchor\": \"x\", \"domain\": [0.0, 1.0]}, \"xaxis2\": {\"anchor\": \"y2\", \"domain\": [0.55, 1.0]}, \"yaxis2\": {\"anchor\": \"x2\", \"domain\": [0.0, 1.0]}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('df8c82c4-6003-4f2a-a6b7-7086afbba3d7',{});}).then(function(){Plotly.animate('df8c82c4-6003-4f2a-a6b7-7086afbba3d7');})\n",
+       "        });</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"df8c82c4-6003-4f2a-a6b7-7086afbba3d7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            'df8c82c4-6003-4f2a-a6b7-7086afbba3d7',\n",
+       "            [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4], \"y\": [64, 37, 16, 1, -8, -11, -8, 1, 16, 37], \"type\": \"scatter\", \"uid\": \"4084887c-d589-11e9-98d9-af26b0674e77\", \"xaxis\": \"x\", \"yaxis\": \"y\"}, {\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4], \"y\": [-30, -24, -18, -12, -6, 0, 6, 12, 18, 24], \"type\": \"scatter\", \"uid\": \"4085603a-d589-11e9-98d9-af26b0674e77\", \"xaxis\": \"x2\", \"yaxis\": \"y2\"}],\n",
+       "            {\"xaxis\": {\"anchor\": \"y\", \"domain\": [0.0, 0.45]}, \"yaxis\": {\"anchor\": \"x\", \"domain\": [0.0, 1.0]}, \"xaxis2\": {\"anchor\": \"y2\", \"domain\": [0.55, 1.0]}, \"yaxis2\": {\"anchor\": \"x2\", \"domain\": [0.0, 1.0]}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('df8c82c4-6003-4f2a-a6b7-7086afbba3d7',{});}).then(function(){Plotly.animate('df8c82c4-6003-4f2a-a6b7-7086afbba3d7');})\n",
+       "        });</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from graph import plot_figure\n",
     "side_by_side_three_x_squared_minus_eleven = side_by_side_derivative_rules(three_x_squared_minus_eleven, list(range(-5, 5)))\n",
